@@ -1,6 +1,7 @@
 
   o convert firmware.sh to C
-  o get rid of braindead "scan all devices to find myself" libusb interface
-      if it can not be fixed, drop libusb entirely
+  o get rid of "scan all devices to find myself" libusb interface
+      if it can not be fixed, drop libusb entirely and add a simple
+      wrapper around the Linux usb ioctls we need
   o drop all support for the DEPRECATED sysfs layout
-  o add warning for BUS, SYSFS, ID
+  o remove deprecated BUS=, SYSFS{}=, ID= keys
